[gd_scene load_steps=13 format=3 uid="uid://bnysjrldq7hr4"]

[ext_resource type="Script" path="res://scripts/characters/player.gd" id="1_c7bmg"]
[ext_resource type="Script" path="res://scripts/characters/spring_arm_pivot.gd" id="2_0npem"]
[ext_resource type="PackedScene" uid="uid://bnhjly5gerpc" path="res://scenes/characters/bases/chara.tscn" id="3_hrgne"]
[ext_resource type="Texture2D" uid="uid://m2ih20yn1b45" path="res://src/textures/chara_blue.png" id="4_kwek8"]
[ext_resource type="Texture2D" uid="uid://dwaqb1lctvbdf" path="res://src/textures/controller/Xbox_Left_Bumper.svg.png" id="5_lojhk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3ec55"]
radius = 1.81226
height = 10.3736

[sub_resource type="SphereShape3D" id="SphereShape3D_he2j2"]
radius = 15.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mmspi"]
emission_shape = 1
emission_sphere_radius = 15.0
direction = Vector3(1, 90, 0)
spread = 84.036
initial_velocity_max = 17.24
gravity = Vector3(0, 9.8, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u6m57"]
albedo_color = Color(0.860337, 0.325215, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_n2qll"]
material = SubResource("StandardMaterial3D_u6m57")

[sub_resource type="LabelSettings" id="LabelSettings_hsl1y"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_0jrv4"]
font_size = 24

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_c7bmg")

[node name="LiveBox" type="CollisionShape3D" parent="."]
transform = Transform3D(-0.871231, 0, 0.490873, 0, 1, 0, -0.490873, 0, -0.871231, 0, 5.20198, 0)
shape = SubResource("CapsuleShape3D_3ec55")

[node name="DeathBox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 5.20198, 0)
shape = SubResource("CapsuleShape3D_3ec55")

[node name="ActiveBox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ActiveBox"]
shape = SubResource("SphereShape3D_he2j2")

[node name="SpringArmPivot" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 7.31316, 0)
script = ExtResource("2_0npem")

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 4.26215, -0.0464048)
spring_length = 15.0

[node name="Camera3D" type="Camera3D" parent="SpringArmPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.991687, 0.128674, 0, -0.128674, 0.991687, 0, 0.386555, -0.733664)

[node name="ActiveParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 1080
lifetime = 0.64
one_shot = true
process_material = SubResource("ParticleProcessMaterial_mmspi")
draw_pass_1 = SubResource("SphereMesh_n2qll")

[node name="chara" parent="." instance=ExtResource("3_hrgne")]

[node name="HealthBar" type="TextureProgressBar" parent="."]
modulate = Color(100, 33.513, 0, 1)
anchors_preset = -1
anchor_right = 0.001
anchor_bottom = 0.122
offset_left = 1.0
offset_top = 23.0
offset_right = 62.848
offset_bottom = 38.944
scale = Vector2(502.788, 10.9956)
value = 100.0
texture_progress = ExtResource("4_kwek8")

[node name="MomentumBar" type="TextureProgressBar" parent="."]
anchors_preset = -1
anchor_right = 0.001
anchor_bottom = 0.122
offset_left = 1.0
offset_top = 36.0
offset_right = 62.848
offset_bottom = 51.944
scale = Vector2(502.788, 10.9956)
value = 100.0
texture_progress = ExtResource("4_kwek8")

[node name="InputPrompt" type="TextureRect" parent="."]
offset_left = 518.0
offset_top = 12.0
offset_right = 2438.0
offset_bottom = 910.0
scale = Vector2(0.05, 0.05)
texture = ExtResource("5_lojhk")

[node name="Money" type="Label" parent="."]
offset_left = 1819.0
offset_top = 6.0
offset_right = 1917.0
offset_bottom = 29.0
text = "$100"
horizontal_alignment = 2

[node name="Experience" type="Label" parent="."]
offset_left = 1878.0
offset_top = 29.0
offset_right = 1918.0
offset_bottom = 52.0
text = "0xp"
horizontal_alignment = 2

[node name="GameSaved" type="Label" parent="."]
offset_left = 7.0
offset_top = 62.0
offset_right = 107.0
offset_bottom = 85.0
text = "Game Saved!"

[node name="Stage" type="Label" parent="."]
offset_left = 1738.0
offset_top = 31.0
offset_right = 1781.0
offset_bottom = 54.0
text = "Stage"

[node name="Number" type="Label" parent="Stage"]
layout_mode = 0
offset_left = 10.0
offset_top = -32.0
offset_right = 50.0
offset_bottom = 13.0
text = "1"
label_settings = SubResource("LabelSettings_hsl1y")

[node name="Wave" type="Label" parent="."]
offset_left = 1813.0
offset_top = 31.0
offset_right = 1856.0
offset_bottom = 54.0
text = "Wave
"

[node name="Number" type="Label" parent="Wave"]
layout_mode = 0
offset_left = 10.0
offset_top = -32.0
offset_right = 50.0
offset_bottom = 13.0
text = "1"
label_settings = SubResource("LabelSettings_hsl1y")

[node name="ActiveCooldown" type="TextureProgressBar" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -177.0
offset_right = 49.0
offset_bottom = -176.0
grow_vertical = 0
scale = Vector2(64, 128)
max_value = 3600.0
fill_mode = 3
texture_progress = ExtResource("4_kwek8")

[node name="Label" type="Label" parent="ActiveCooldown"]
layout_mode = 0
offset_top = 1.0
offset_right = 86.0
offset_bottom = 35.0
scale = Vector2(0.016, 0.008)
text = "Ability"
label_settings = SubResource("LabelSettings_0jrv4")
